<resources>

    <!--Navigational bar-->
    <string name="app_name">UOCS-Safe</string>
    <string name="main">Main Menu</string>
    <string name="message">Message</string>
    <string name="news">Newsletter</string>
    <string name="map">Map</string>
    <string name="tips">Safety Tips</string>
    <string name="setting">Setting</string>
    <string name="sign_out">Sign Out</string>
    <string name="personal">Personal</string>
    <string name="group">Chat Room Name</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_reporting__category">Non Emergency Report</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_news">News Feed</string>

    <!-- Strings related to login -->
    <string name="prompt_name">Username *</string>
    <string name="prompt_password">Password *</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!--Report form activity-->
    <string name="post_title">Title</string>
    <string name="post_desc">Description</string>
    <string name="media">Media</string>
    <string name="location">Location</string>

    <string name="add">Add User</string>
    <string name="min"> Min ago.</string>
    <string name="entermsg">Enter a message</string>
    <string name="send">Send</string>
    <string name="comment">Comments:</string>
    <string name="no_comment">No comment found on this post</string>

    <!-- status bar-->
    <string name="status">Status: </string>
    <string name="reason">Reason: </string>
    <string name="action">Action Taken: </string>

    <!--Sample String-->
    <string name="dummy_text">
        It is a long established fact that a reader will be distracted by the readable content of a
        page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less
        normal distribution of letters, as opposed to using \'Content here, content here\', making
        it look like readable English. Many desktop publishing packages and web page editors now use
        Lorem Ipsum as their default model text, and a search for \'lorem ipsum\' will uncover many
        web sites still in their infancy. Various versions have evolved over the years, sometimes by
        accident, sometimes on purpose (injected humour and the like).</string>
</resources>
