<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/mainmenu"
            android:icon="@drawable/ic_home_black_24px"
            android:title="@string/main"/>
        <item
            android:id="@+id/map"
            android:icon="@drawable/ic_map_black_24px"
            android:title="@string/map"/>
        <item
            android:id="@+id/news"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:title="@string/news" />
        <item
            android:id="@+id/personal"
            android:icon="@drawable/ic_person_pin_black_24dp"
            android:title="@string/personal" />
        <item
            android:id="@+id/message"
            android:icon="@drawable/ic_chat_black_24px"
            android:title="@string/message" />
        <item
            android:id="@+id/tips"
            android:icon="@drawable/ic_lightbulb_outline_black_24dp"
            android:title="@string/tips"/>
        <item
            android:id="@+id/out"
            android:icon="@drawable/ic_first_page_black_24dp"
            android:title="@string/sign_out" />
    </group>
</menu>
